Closed Bug 350046 Opened 18 years ago Closed 18 years ago

[FIX] The display of www.smh.com.au is a mess

Categories

(Core :: Layout: Floats, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: scanorama346, Assigned: MatsPalmgren_bugz)

References

()

Details

(Keywords: regression, testcase)

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060824 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060824 Minefield/3.0a1

Using the 0824 nightly build to browse www.smh.com.au the page is not being displayed properly. It works on the previous nightly, as well as the latest branch nightly build. The components of the page are being placed at the incorrect spots of the screen, which makes the page unreadable.

Reproducible: Always

Steps to Reproduce:
1.Open Minefield build 2006082404
2.Go to www.smh.com.au
3.The page is not displaying properly

Actual Results:  
The display is a mess, totally unreadble.
http://img458.imageshack.us/my.php?image=trunkim7.jpg

Expected Results:  
It should display the page properly.

http://img242.imageshack.us/my.php?image=branchzm1.jpg
Component: General → Layout
Product: Firefox → Core
QA Contact: general → layout
Version: unspecified → Trunk
Attached file testcase
This worked fine in the 2006-08-23 build, but not anymore in the 2006-08-24 build:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-08-23+05&maxdate=2006-08-24+09&cvsroot=%2Fcvsroot
Seems to me a regression from patch B in bug 337419.
Blocks: 337419
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression, testcase
Confirmed regression is from bug 337419 Patch B by backout.

I think that by making placeholder's to non-splittable out-of-flows also
non-splittable I broke the block margin calculation here:
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/layout/generic/nsBlockReflowState.cpp&rev=3.515&root=/cvsroot&mark=236-238#217

I'll see if I can make a quick fix for this... otherwise I will back out
the offending patch (it isn't needed to fix the crash in 337419)...
Assignee: nobody → mats.palmgren
Component: Layout → Layout: Floats
OS: Windows XP → All
Hardware: PC → All
I think Patch B from bug 337419 is in fact correct, it's the indicated block in
nsBlockReflowState::ComputeBlockAvailSpace() that needs more work...
I think it could probably be simplified to
  if (NS_FRAME_SPLITTABLE_NON_RECTANGULAR == aSplitType) {
but there are several frame types that reports wrong split types IMO.
For example ComboboxControl is SPLITTABLE_NON_RECTANGULAR and
HTMLButtonControl is SPLITTABLE which looks strange to me (they should
both be NON_SPLITTABLE), yes?

It would also be interesting to know if have any other frames that are
NON_SPLITTABLE and not REPLACED (like the scroll frames now are).

I think it would be good if we could avoid testing on split type at all -
it's an implementation detail that doesn't really reflect what the CSS
spec asks for:
http://www.w3.org/TR/CSS21/visuren.html#floats
Summary: The display of www.smh.com.au is a mess → [FIX] The display of www.smh.com.au is a mess
Attached patch Patch rev. 1Splinter Review
I think this is all I want to do for now.
I'll file a new bug on the other issues in comment 5.
Attachment #235343 - Flags: superreview?(roc)
Attachment #235343 - Flags: review?(roc)
Attachment #235343 - Flags: superreview?(roc)
Attachment #235343 - Flags: superreview+
Attachment #235343 - Flags: review?(roc)
Attachment #235343 - Flags: review+
Checked in to trunk at 2006-08-25 15:55 PDT.

Filed bug 350246 to followup on the other issues mentioned in comment 5.

-> FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: