Don't overlap scroll frame margin box with float (regression). b=350046 r+sr=roc